Fix work card height on mobile

--- a/src/styles/Projects.css
+++ b/src/styles/Projects.css
@@ -58,7 +58,7 @@
   }
 }
 
-@media only screen and (max-width: 730px) {
+@media only screen and (max-width: 710px) {
   .project {
     flex-direction: column;
     min-width: 100%;
